# simple-synth

./: Cargo.toml  README.md  bundler.toml
src/: editor.rs  lib.rs  main.rs
src/editor/: my_assets.rs  my_fonts.rs
src/editor/my_assets/resources/fonts/Red_Rose/: README.txt
